--- a/public/css/minimal-layout.css
+++ b/public/css/minimal-layout.css
@@ -1,6 +1,9 @@
 /*--------------------------------------------------------------
 >>> PURE CSS:
 --------------------------------------------------------------*/
+.pure-button.rounded{
+	border-radius: 25px !important;
+}
 .pure-button:focus,a:active,a:hover{
     outline:0
 }
@@ -89,7 +92,7 @@
     color:rgba(0,0,0,.8);
     border:1px solid #999;
     border:transparent;
-    background-color:#E6E6E6;
+    background-color:#b6d8de;
     text-decoration:none;
     letter-spacing:normal;
     word-spacing:normal;
@@ -106,8 +109,14 @@
 	color: #fff;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 }
+.pure-button-bordered
+{
+	background-color: transparent;
+	border: 1px solid #000;
+	color: #000;
+}
 .pure-button-primary{
-    background-color:#0078e7;
+    background-color:#47809e;
 }
 .pure-button.button-success {
 	background: rgb(110, 204, 57);
@@ -226,6 +235,14 @@ ul.list-style-none, ol.list-style-none
 {
 	width: 100%;
 }
+.height-100
+{
+	height: 100%;
+}
+.bottom-0
+{
+	margin-bottom: 0;
+}
 .bottom-5
 {
 	margin-bottom: 5px;
@@ -241,6 +258,10 @@ ul.list-style-none, ol.list-style-none
 .bottom-40
 {
 	margin-bottom: 40px;
+}
+.padding-0
+{
+	padding: 0;
 }
 .padding-5
 {
@@ -328,14 +349,14 @@ strong, .strong
 }
 .minimal_alert
 {
-	background-color: #c45252;
-	color: #fff;
+	background-color: #ff8080;
+	color: #000;
 	padding: 10px;
 }
 .minimal_success
 {
-	background-color: #53bc53;
-	color: #fff;
+	background-color: #7ecd7e;
+	color: #000;
 	padding: 10px;	
 }
 /*--------------------------------------------------------------
