--- a/public/css/minimal-layout.css
+++ b/public/css/minimal-layout.css
@@ -7,7 +7,7 @@
 .pure-button:focus,a:active,a:hover{
     outline:0
 }
-.pure-table{
+.pure-table, .wp-block-table > table{
     border-collapse:collapse;
     border-spacing:0
 }
@@ -33,10 +33,6 @@
     display:inline-block;
     zoom:1
 }
-.pure-g [class*=pure-u]{
-    font-family:sans-serif
-}
-
 .pure-u-1-6{
     width:16.6667%
 }
@@ -151,11 +147,11 @@
     margin:.5em 0;
     display:block
 }
-.pure-table{
+.pure-table, .wp-block-table > table{
     empty-cells:show;
     border:1px solid #cbcbcb
 }
-.pure-table td,.pure-table th{
+.pure-table td,.pure-table th, .wp-block-table > table td{
     border-left:1px solid #cbcbcb;
     border-width:0 0 0 1px;
     font-size:inherit;
@@ -163,7 +159,7 @@
     overflow:visible;
     padding:.5em 1em
 }
-.pure-table td:first-child,.pure-table th:first-child{
+.pure-table td:first-child,.pure-table th:first-child, .wp-block-table > table td:first-child{
     border-left-width:0
 }
 .pure-table thead{
@@ -172,16 +168,16 @@
     text-align:left;
     vertical-align:bottom
 }
-.pure-table td{
+.pure-table td, .wp-block-table > table td{
     background-color:transparent
 }
 .pure-table-odd td,.pure-table-striped tr:nth-child(2n-1) td{
     background-color:#f2f2f2
 }
-.pure-table-bordered td{
+.pure-table-bordered td, .wp-block-table > table td{
     border-bottom:1px solid #cbcbcb
 }
-.pure-table-bordered tbody>tr:last-child>td{
+.pure-table-bordered tbody>tr:last-child>td, .wp-block-table > table tbody>tr:last-child>td{
     border-bottom-width:0
 }
 .hidden,[hidden]{
@@ -356,6 +352,12 @@ strong, .strong
 .minimal_success
 {
 	background-color: #7ecd7e;
+	color: #000;
+	padding: 10px;	
+}
+.minimal_warning
+{
+	background-color:  #ffff4d;
 	color: #000;
 	padding: 10px;	
 }
